[package]
name = "tommyjl-wiki"
publish = false
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
axum = "0.2.8"
bytes = "1.1.0"
handlebars = "4.1.3"
http = "0.2.5"
http-body = "0.4.3"
hyper = "0.14.13"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
